--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "json-server": "json-server --watch db.json"
   },
   "repository": {
     "type": "git",
@@ -19,6 +19,9 @@
   "homepage": "https://github.com/belmiro00s/LearningMoreJS#readme",
   "type": "module",
   "dependencies": {
-    "date-fns": "^3.6.0"
+    "date-fns": "^3.6.0",
+    "json": "^11.0.0",
+    "json-server": "^1.0.0-beta.1",
+    "server": "^1.0.39"
   }
 }
